# weeding_robot

./: CMakeLists.txt  README.md
apps/: test_odom.py  weedbot_main.py
common/: enu.py  geom.py  params.yaml  time_sync.py
controller/: diff_drive.py
gcs/: http_api.py
localization/: ekf_fusion.py  lidar_odom_ndt.cpp
mapping/: occ_grid.py
planner/: coverage.py  local_dwa.py  pure_pursuit.py
sensors/: eg25g_gps.py  imu_source.py  livox_source.py
